# bsit_rpc

./: .gitignore  CMakeLists.txt  Interface.idl
client/: main.cpp
client/cli/: cli.cpp  cli.hpp
client/file_manager/: file_manager.cpp  file_manager.hpp
common/: errors.hpp
common/utils/: logging.h  rpc.c
server/: main.cpp
server/file_manager/: file_manager.cpp  file_manager.hpp
server/rpc/: rpc.cpp  rpc.hpp
